--- a/styles.css
+++ b/styles.css
@@ -55,9 +55,47 @@ img {
     cursor: pointer;
     border-radius: 5px;
     margin-top: 20px;
+    margin-bottom: 20px;
     border-width: 0;
+}
+
+#button-container {
+    display: flex;
+    justify-content: center;
 }
 
 #analyze-button:hover {
     background-color: #9f63af;
+}
+
+#loading {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0.9;
+    background-color: #fff;
+    z-index: 99;
+}
+
+#loading-image {
+    z-index: 100;
+}
+
+#loading-text {
+    margin-top: 20px;
+    font-size: 1.2em;
+    color: #000;
+    z-index: 100;
+}
+
+#error-message {
+    margin-top: 20px;
+    font-size: 0.9em;
+    color: #d83e3e;
 }
